<resources>
    <string name="app_name">andFHEM</string>
    <string name="unsortedRoomName">unsorted</string>
    <string name="deviceName">Name</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="moonRise">Moon Rise</string>
    <string name="moonSet">Moon Set</string>
    <string name="windChill">Windchill</string>
    <string name="rain">Rain</string>
    <string name="rainToday">Regen Today</string>
    <string name="rainYesterday">Regen Yesterday</string>
    <string name="humidity">Humidity</string>
    <string name="actuator">Actuator</string>
    <string name="state">State</string>
    <string name="reportedState">Reported State</string>
    <string name="battery">Battery</string>
    <string name="batteryVoltage">Battery voltage</string>
    <string name="measured">Measured</string>
    <string name="warnings">Warnings</string>
    <string name="time">Time</string>
    <string name="avgHour">Average Hour</string>
    <string name="avgDay">Average Day</string>
    <string name="avgYear">Average Year</string>
    <string name="avgMonth">Average Month</string>
    <string name="minDay">Minimum Day</string>
    <string name="minMonth">Minimum Month</string>
    <string name="maxDay">Maximum Day</string>
    <string name="maxMonth">Maximum Month</string>
    <string name="isRaining">Is Raining?</string>
    <string name="sunshine">Sonneneinstrahlung</string>
    <string name="desiredTemperature">Desired Temperature</string>
    <string name="comfortTemperature">Comfort-Temperature</string>
    <string name="ecoTemperature">Eco-Temperature</string>
    <string name="maximumTemperature">Maximum Temperature</string>
    <string name="minimumTemperature">Minimum Tempeature</string>
    <string name="forecast">Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="pressureNN">Pressure NN</string>
    <string name="dewpoint">Dewpoint</string>
    <string name="rainRate">Rain Rate</string>
    <string name="rainTotal">Rain Total</string>
    <string name="windAvgSpeed">Wind Avg. Speed</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
    <string name="uvValue">UV Value</string>
    <string name="uvRisk">UV Risk</string>
    <string name="rooms">Room</string>
    <string name="room">Room</string>
    <string name="counterA">Counter A</string>
    <string name="counterB">Counter B</string>
    <string name="inputA">Input A</string>
    <string name="inputB">Input B</string>
    <string name="inputC">Input C</string>
    <string name="inputD">Input D</string>
    <string name="counterReadingTariff1">Counter reading tariff 1</string>
    <string name="counterReading">Counter reading</string>
    <string name="present">Present</string>
    <string name="currentUsage">Current Usage</string>
    <string name="currentVoltage">Current Voltage</string>
    <string name="hourUsage">Hour usage</string>
    <string name="dayUsage">Day Usage</string>
    <string name="dayLastUsage">Last day Usage</string>
    <string name="monthUsage">Month Usage</string>
    <string name="yearUsage">Year Usage</string>
    <string name="lastStateChange">Last State Change</string>
    <string name="lastState">Last State</string>
    <string name="powerState">Power State</string>
    <string name="power">Power</string>
    <string name="stopReason">Stop Reason</string>
    <string name="audio">Audio</string>
    <string name="audioMode">Audio mode</string>
    <string name="input">Input</string>
    <string name="mode">Mode</string>
    <string name="definition">Definition</string>
    <string name="regression">regression</string>
    <string name="sum">Sum</string>
    <string name="mac">MAC address</string>
    <string name="ip">IP address</string>
    <string name="wake">Wake</string>
    <string name="isRunning">Is Running?</string>
    <string name="shutdown">Shutdown</string>
    <string name="stateAppendix">Set %1$s to</string>
    <string name="requestRefresh">Request refresh</string>
    <string name="delta">Delta</string>
    <string name="weather">Weather</string>
    <string name="visibilityCondition">Visibility condition</string>
    <string name="currentWeather">Current Weather</string>
    <string name="dimUp">Dim +</string>
    <string name="dimDown">Dim -</string>
    <string name="actions">Actions</string>
    <string name="model">Model</string>
    <string name="send">Send</string>
    <string name="error">Error!</string>
    <string name="error_send">Send last error</string>
    <string name="error_send_content">AndFHEM can send the last error as mail to the developer. Continue?</string>
    <string name="error_send_no_error">Cannot send an error, as none is registered!</string>
    <string name="errorDeviceListLoad">Could not load %1$s device(s)!</string>
    <string name="errorOutdatedData">Sensor data seems to be outdated. Make sure the device sends data.</string>
    <string name="application_log_send">Send application log</string>
    <string name="errorExternalStorageNotPresent">File system not accessible.</string>
    <string name="errorNotAValidBackupFile">Cannot read file. Is this really a andFHEM backup file?</string>
    <string name="hex2quat">Hex -> Quat</string>
    <string name="quat2hex">Quat -> Hex</string>
    <string name="result">Result</string>
    <string name="set_value">Set value</string>
    <string name="set">Set</string>
    <string name="android_version">Android Version</string>
    <string name="feature_requires_android_version">This feature requires a minimum Android version of %1$s.</string>
    <string name="unknown">unknown</string>
    <string name="type">Type</string>
    <string name="attributeName">Attribute-Name</string>
    <string name="about">About</string>
    <string name="copyFrom">Copy from …</string>
    <string name="commandAccepted">Command accepted?</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="stop">stop</string>
    <string name="visibility">visibility</string>
    <string name="rawValue">Raw value</string>
    <string name="content">Content</string>
    <string name="fillPercentage">Fill percentage</string>
    <string name="maximumContent">Maximum content</string>
    <string name="currentSwitchTime">Current Switch Time</string>
    <string name="currentSwitchDevice">Current Device</string>
    <string name="password">Password</string>
    <string name="connectionUsername">Username</string>
    <string name="connectionUsernameDesc">(optional)</string>
    <string name="connectionPassword">Password</string>
    <string name="connectionPasswordDesc">(optional)</string>
    <string name="connectionShowPassword">Show</string>
    <string name="connectionURL">URL</string>
    <string name="connectionURLDesc">i.e. http://192.168.0.1:8083/fhem</string>
    <string name="connectionAlternateUrl">Secondary URL</string>
    <string name="connectionAlternateUrlPlaceholder">i.e. http://example.dyndns.com:8083/fhem</string>
    <string name="connectionAlternateUrlDesc">If the app cannot establish a connection to the primary URL it will attempt to connect to the secondary URL. This is required for routers not capable of routing external requests back into its own network.</string>
    <string name="connectionClientCertificate">Client certificate</string>
    <string name="connectionClientCertificateDesc">(optional)</string>
    <string name="connectionClientCertificatePassword">Client Certificate password</string>
    <string name="connectionClientCertificatePasswordDesc">(optional)</string>
    <string name="preferences">Preferences</string>
    <string name="help">Help</string>
    <string name="roomList">Rooms</string>
    <string name="favorites">Favorites</string>
    <string name="alldevices">All Devices</string>
    <string name="conversion">Conversion</string>
    <string name="timer">Timer</string>
    <string name="send_command">Send Command</string>
    <string name="settingsOthersCategory">Other Preferences</string>
    <string name="settingsAppearancePreferencesCategory">Appearance</string>
    <string name="settingsErrorsCategory">Error-Handling</string>
    <string name="settingsCloudMessagingCategory">Cloud Messaging</string>
    <string name="settingsAutoUpdateCategory">Automatic Updates</string>
    <string name="settingsConnectionCategory">Connection</string>
    <string name="settingsBackupCategory">Backup</string>
    <string name="settingsWidgetCategory">Widgets</string>
    <string name="settingsShowHiddenDevices">Show hidden devices</string>
    <string name="settingsShowHiddenDevicesSummaryOn">Show devices from room \'hidden\'</string>
    <string name="settingsShowHiddenDevicesSummaryOff">Don\'t show devices from room \'hidden\'</string>
    <string name="settingsShowMeasuredInOverview">Show measure time in overview</string>
    <string name="settingsShowMeasuredInOverviewOn">Show measure time for each device in the overview (if applicable)</string>
    <string name="settingsShowMeasuredInOverviewOff">Don\'t show measure time in the overview.</string>
    <string name="settingsDefaultTimespan">Graph Timespan</string>
    <string name="settingsAutoUpdate">Auto Update</string>
    <string name="settingsDeviceColumnWidth">Device column width</string>
    <string name="settingsDeviceColumnWidthSummary">Device columns have a minimum width of the given value in dp</string>
    <string name="settingsDeviceListPaddingRight">Device lists right padding</string>
    <string name="settingsDeviceListPaddingRightSummary">Device lists will keep a right padding of the given value in dp</string>
    <string name="settingsDeviceFunctionalityOrder">Device functionality order</string>
    <string name="settingsDeviceFunctionalityOrderSummary">Order of device functionalities as well as hide and view</string>
    <string name="settingsUpdateOnApplicationStart">Refresh on application start</string>
    <string name="settingsUpdateOnApplicationStartSummaryOn">Update device list upon application start</string>
    <string name="settingsUpdateOnApplicationStartSummaryOff">Don\'t update device list upon application start</string>
    <string name="settingsUpdateRoomOnOpen">Update room on open</string>
    <string name="settingsUpdateRoomOnOpenSummaryOn">Update all devices in a room when opening it</string>
    <string name="settingsUpdateRoomOnOpenSummaryOff">Don\'t update devices in a room when opening it</string>
    <string name="settingsShowSetValueButtons">\'Set\' button for sliders</string>
    <string name="settingsShowSetValueButtonsSummaryOn">Sliders get an additional \'Set\' button</string>
    <string name="settingsShowSetValueButtonsSummaryOff">Sliders get no \'Set\' button</string>
    <string name="settingsStartupView">Startup view</string>
    <string name="settingsTheme">Theme</string>
    <string name="settingsConnectionTimeout">Connection timeout</string>
    <string name="settingsConnectionTimeoutSummary">Stop the connection attempt if the server does not respond within the given amount in seconds</string>
    <string name="settingsCommandExecutionRetries">Command execution retries</string>
    <string name="settingsCommandExecutionRetriesSummary">Try to send a command times if the command execution fails</string>
    <string name="settingsClearTrustedCertificates">Clear trusted certificates</string>
    <string name="settingsClearTrustedCertificatesSummary">Remove all manually trusted certificates from the application trust store</string>
    <string name="change">change</string>
    <string name="dp_suffix" translatable="false">dp</string>
    <string name="s_suffix" translatable="false">s</string>
    <string name="fcm_history">FCM History</string>
    <string name="fhem_log">FHEM Log</string>
    <string name="csrfTokenLabel">CSRF Token (optional)</string>
</resources>