<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/allDevicesFragment"
            android:checked="true"
            android:icon="@drawable/all_devices"
            android:title="@string/alldevices" />
        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/roomListFragment"
            android:icon="@drawable/room_list"
            android:title="@string/roomList" />
        <item
            android:id="@+id/timerListFragment"
            android:icon="@drawable/timer"
            android:title="@string/timer" />
        <item
            android:id="@+id/sendCommandFragment"
            android:icon="@drawable/send_command"
            android:title="@string/send_command" />
        <item
            android:id="@+id/conversionFragment"
            android:icon="@drawable/conversion"
            android:title="@string/conversion" />
        <item
            android:id="@+id/fcmHistoryFragment"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/fcm_history" />
        <item
                android:id="@+id/fhem_log"
                android:icon="@drawable/ic_action_storage"
                android:title="@string/fhem_log"/>
    </group>
    <group android:id="@+id/secondary_items">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_prefs"
            android:title="@string/preferences" />
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/help" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/about" />
    </group>
</menu>