<?xml version="1.0" encoding="utf-8"?><!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory
        android:title="@string/settingsAppearancePreferencesCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListPreference
            android:id="@+id/prefStartupView"
            android:defaultValue="FAVORITES"
            android:entries="@array/startupViews"
            android:entryValues="@array/startupViewsValues"
            android:key="STARTUP_VIEW"
            android:title="@string/settingsStartupView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="SHOW_SET_VALUE_BUTTONS"
            android:title="@string/settingsShowSetValueButtons"
            android:summaryOn="@string/settingsShowSetValueButtonsSummaryOn"
            android:summaryOff="@string/settingsShowSetValueButtonsSummaryOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefShowHiddenDevices"
            android:title="@string/settingsShowHiddenDevices"
            android:summaryOn="@string/settingsShowHiddenDevicesSummaryOn"
            android:summaryOff="@string/settingsShowHiddenDevicesSummaryOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefShowMeasuredInOverview"
            android:title="@string/settingsShowMeasuredInOverview"
            android:summaryOn="@string/settingsShowMeasuredInOverviewOn"
            android:summaryOff="@string/settingsShowMeasuredInOverviewOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.preference.SeekBarPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="355"
            android:dialogMessage=""
            android:key="DEVICE_COLUMN_WIDTH"
            android:max="1000"
            android:text="@string/dp_suffix"
            android:summary="@string/settingsDeviceColumnWidthSummary"
            android:title="@string/settingsDeviceColumnWidth" />

        <androidx.preference.SeekBarPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:dialogMessage=""
            android:key="DEVICE_LIST_PADDING_RIGHT"
            android:max="1000"
            android:text="@string/dp_suffix"
            android:summary="@string/settingsDeviceListPaddingRightSummary"
            android:title="@string/settingsDeviceListPaddingRight" />

        <li.klass.fhem.widget.deviceFunctionality.DeviceFunctionalityOrderPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="DEVICE_FUNCTIONALITY_ORDER_VISIBLE"
            android:summary="@string/settingsDeviceFunctionalityOrderSummary"
            android:title="@string/settingsDeviceFunctionalityOrder" />

        <ListPreference
            android:id="@+id/graphDefaultTimespanSelector"
            android:defaultValue="24"
            android:entries="@array/graphDefaultTimespanEntries"
            android:entryValues="@array/graphDefaultTimespanValues"
            android:key="GRAPH_DEFAULT_TIMESPAN"
            android:summary=""
            android:title="@string/settingsDefaultTimespan" />

        <ListPreference
            android:id="@+id/theme"
            android:defaultValue="AUTO"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values"
            android:key="THEME"
            android:summary=""
            android:title="@string/settingsTheme" />

    </PreferenceCategory>
</PreferenceScreen>
