<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsAppearancePreferencesCategory">
        <extra
            android:name="type"
            android:value="appearance" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsWidgetCategory">
        <extra
            android:name="type"
            android:value="widgets" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsErrorsCategory">
        <extra
            android:name="type"
            android:value="errors" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsCloudMessagingCategory">
        <extra
            android:name="type"
            android:value="cloud_messaging" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsAutoUpdateCategory">
        <extra
            android:name="type"
            android:value="auto_update" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsConnectionCategory">
        <extra
            android:name="type"
            android:value="connection" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsBackupCategory">
        <extra
            android:name="type"
            android:value="backup" />
    </header>
    <header
        android:fragment="li.klass.fhem.settings.SettingsFragment"
        android:title="@string/settingsOthersCategory">
        <extra
            android:name="type"
            android:value="others" />
    </header>
</preference-headers>