<?xml version="1.0" encoding="utf-8"?><!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory android:title="@string/settingsAutoUpdateCategory">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UPDATE_ON_APPLICATION_START"
            android:title="@string/settingsUpdateOnApplicationStart"
            android:summaryOn="@string/settingsUpdateOnApplicationStartSummaryOn"
            android:summaryOff="@string/settingsUpdateOnApplicationStartSummaryOff" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="UPDATE_ON_ROOM_OPEN"
            android:title="@string/settingsUpdateRoomOnOpen"
            android:summaryOn="@string/settingsUpdateRoomOnOpenSummaryOn"
            android:summaryOff="@string/settingsUpdateRoomOnOpenSummaryOff" />

        <ListPreference
            android:id="@+id/autoUpdateTime"
            android:defaultValue="-1"
            android:entries="@array/updateRoomListTimeEntries"
            android:entryValues="@array/updateRoomListTimeValues"
            android:key="AUTO_UPDATE_TIME"
            android:title="@string/settingsAutoUpdate" />
    </PreferenceCategory>
</PreferenceScreen>
