<?xml version="1.0" encoding="utf-8"?><!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory android:title="@string/settingsConnectionCategory">
        <androidx.preference.SeekBarPreference
            min="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="4"
            android:dialogMessage=""
            android:key="CONNECTION_TIMEOUT"
            android:max="20"
            android:text="@string/s_suffix"
            android:summary="@string/settingsConnectionTimeoutSummary"
            android:title="@string/settingsConnectionTimeout" />

        <androidx.preference.SeekBarPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="3"
            android:dialogMessage=""
            android:key="COMMAND_EXECUTION_RETRIES"
            android:max="20"
            android:text=""
            android:summary="@string/settingsCommandExecutionRetriesSummary"
            android:title="@string/settingsCommandExecutionRetries" />
        <Preference
            android:key="CLEAR_TRUSTED_CERTIFICATES"
            android:summary="@string/settingsClearTrustedCertificatesSummary"
            android:title="@string/settingsClearTrustedCertificates" />
    </PreferenceCategory>
</PreferenceScreen>
