<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="*">

    <TextView
        android:id="@+id/urlLabel"
        style="@style/formLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionURL" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        style="@style/formInput"
        android:layout_below="@+id/urlLabel"
        android:hint="@string/connectionURLDesc"
        android:inputType="textUri"
        android:autofillHints="@string/connectionURL" />

    <TextView
        android:id="@+id/alternateUrlLabel"
        style="@style/formLabel"
        android:layout_below="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionAlternateUrl" />

    <EditText
        android:id="@+id/alternate_url"
        android:layout_width="match_parent"
        style="@style/formInput"
        android:layout_below="@+id/alternateUrlLabel"
        android:hint="@string/connectionAlternateUrlPlaceholder"
        android:inputType="textUri"
        android:autofillHints="@string/connectionAlternateUrlDesc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionAlternateUrlDesc"
        android:layout_below="@id/alternate_url"
        android:id="@+id/alternateUrlDesc" />

    <TextView
        android:id="@+id/csrfTokenLabel"
        style="@style/formLabel"
        android:layout_below="@+id/alternateUrlDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csrfTokenLabel"
        android:labelFor="@id/csrfToken" />

    <EditText
        android:id="@+id/csrfToken"
        android:layout_width="match_parent"
        style="@style/formInput"
        android:layout_below="@+id/csrfTokenLabel"
        android:inputType="text"
        android:autofillHints="@string/csrfTokenLabel" />

    <TextView
        android:id="@+id/usernameLabel"
        style="@style/formLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/csrfToken"
        android:text="@string/connectionUsername"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        style="@style/formInput"
        android:inputType="text"
        android:layout_below="@id/usernameLabel"
        android:hint="@string/connectionUsernameDesc"
        android:autofillHints="@string/connectionUsername" />

    <TextView
        android:id="@+id/passwordLabel"
        style="@style/formLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionPassword"
        android:layout_below="@id/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        style="@style/formInput"
        android:layout_below="@id/passwordLabel"
        android:inputType="textPassword"
        android:layout_toStartOf="@+id/showPasswordCheckbox"
        android:layout_alignParentStart="true"
        android:hint="@string/connectionPasswordDesc"
        android:autofillHints="@string/password" />
    <CheckBox
        android:id="@+id/showPasswordCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLabel"
        android:layout_alignParentEnd="true"
        android:text="@string/connectionShowPassword"/>

    <TextView
        android:id="@+id/clientCertificateContentLabel"
        style="@style/formLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/connectionClientCertificate" />

    <EditText
        android:id="@+id/clientCertificateContent"
        android:layout_width="fill_parent"
        style="@style/formInput"
        android:layout_below="@+id/clientCertificateContentLabel"
        android:layout_toStartOf="@+id/setClientCertificatePath"
        android:ellipsize="end"
        android:singleLine="false"
        android:gravity="top"
        android:maxLines="4"
        android:hint="@string/connectionClientCertificateDesc"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/setClientCertificatePath"
        style="@style/button"
        android:layout_width="@dimen/abc_action_button_min_width_material"
        android:layout_height="@dimen/abc_action_button_min_width_material"
        android:src="@android:drawable/ic_menu_search"
        android:text="@string/change"
        android:layout_above="@+id/clientCertificatePasswordLabel"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/connectionClientCertificateDesc"/>

    <TextView
        android:id="@+id/clientCertificatePasswordLabel"
        style="@style/formLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientCertificateContent"
        android:text="@string/connectionClientCertificatePassword" />

    <EditText
        android:id="@+id/clientCertificatePassword"
        style="@style/formInput"
        android:layout_width="fill_parent"
        android:layout_below="@+id/clientCertificatePasswordLabel"
        android:layout_toStartOf="@+id/showCertificatePasswordCheckbox"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:hint="@string/connectionClientCertificatePasswordDesc"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/showCertificatePasswordCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clientCertificatePasswordLabel"
        android:layout_alignParentEnd="true"
        android:text="@string/connectionShowPassword"/>

</RelativeLayout>